bookservice and controller changes